; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/kernel/extr_acct.c_acct_process.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/kernel/extr_acct.c_acct_process.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.pid_namespace = type { %struct.pid_namespace* }

@current = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @acct_process() #0 {
  %1 = alloca %struct.pid_namespace*, align 8
  %2 = load i32, i32* @current, align 4
  %3 = call %struct.pid_namespace* @task_active_pid_ns(i32 %2)
  store %struct.pid_namespace* %3, %struct.pid_namespace** %1, align 8
  br label %4

4:                                                ; preds = %10, %0
  %5 = load %struct.pid_namespace*, %struct.pid_namespace** %1, align 8
  %6 = icmp ne %struct.pid_namespace* %5, null
  br i1 %6, label %7, label %14

7:                                                ; preds = %4
  %8 = load %struct.pid_namespace*, %struct.pid_namespace** %1, align 8
  %9 = call i32 @acct_process_in_ns(%struct.pid_namespace* %8)
  br label %10

10:                                               ; preds = %7
  %11 = load %struct.pid_namespace*, %struct.pid_namespace** %1, align 8
  %12 = getelementptr inbounds %struct.pid_namespace, %struct.pid_namespace* %11, i32 0, i32 0
  %13 = load %struct.pid_namespace*, %struct.pid_namespace** %12, align 8
  store %struct.pid_namespace* %13, %struct.pid_namespace** %1, align 8
  br label %4

14:                                               ; preds = %4
  ret void
}

declare dso_local %struct.pid_namespace* @task_active_pid_ns(i32) #1

declare dso_local i32 @acct_process_in_ns(%struct.pid_namespace*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
